mType/tests/testFiles/interface/error/staticMethodNotAllowed.mt
interface A {
    static function doSomething(): void;
}
